--- a/app/src/main/res/drawable-v21/fill_border2.xml
+++ b/app/src/main/res/drawable-v21/fill_border2.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <solid android:color="@color/color_backround" />
-
+    <corners android:radius="5dp"/>
     <stroke
-        android:width="0.5dp"
-        android:color="#CCCCCC" />
+        android:width="0.7dp"
+        android:color="@color/color_backround" />
 
 </shape>
