--- a/baseProject/src/main/res/values/color.xml
+++ b/baseProject/src/main/res/values/color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#373737</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#373737</color>
     <color name="colorAccent">#373737</color>
 
     <color name="red">#f00</color>
