--- a/baseProject/src/main/res/values/color.xml
+++ b/baseProject/src/main/res/values/color.xml
@@ -27,6 +27,7 @@
     <color name="color_value_white">#ffffff</color>
     <color name="color_title_1">#4487A2</color>
     <color name="color_backround">#373737</color>
+    <color name="color_mine">#F7F7F7</color>
 
 
 
