--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,14 @@
         android:layout_alignParentStart="true">
     </android.support.design.widget.TabLayout>
 
-    <android.support.v4.view.ViewPager
+    <cn.meiqu.lainmonitor.view.NoScrollViewPager
         android:layout_below="@id/layout_title"
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/window_background"
-        android:layout_above="@id/table" />
+        android:background="@color/color_mine"
+        android:layout_above="@id/table">
+    </cn.meiqu.lainmonitor.view.NoScrollViewPager>
 
 
 </RelativeLayout>
