--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,10 +1,51 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/color_mine"
     >
+
+
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/fb_person"
+        android:background="@color/window_background"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="50dp"
+        app:fb_text="个人信息"
+        app:fb_textColor="@color/black"
+        app:fb_defaultColor="@color/white"
+        app:fb_focusColor="@color/color_backround"/>
+
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/fb_person_change"
+        android:background="@color/window_background"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentBottom="true"
+        app:fb_text="信息修改"
+        app:paddingStart="50dp"
+        app:fb_textColor="@color/black"
+        app:fb_defaultColor="@color/white"
+        app:fb_focusColor="@color/color_backround"/>
+
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/fb_password"
+        android:background="@color/window_background"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+        app:fb_text="密码修改"
+        app:fb_textColor="@color/black"
+        app:fb_defaultColor="@color/white"
+        app:fb_focusColor="@color/color_backround"/>
 
 
     <mehdi.sakout.fancybuttons.FancyButton
@@ -12,12 +53,12 @@
         android:background="@color/window_background"
         android:layout_width="match_parent"
         android:layout_height="45dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         app:fb_text="退出登录"
         app:fb_textColor="@color/black"
         app:fb_defaultColor="@color/white"
-        app:fb_focusColor="@color/color_green"/>
+        app:fb_focusColor="@color/color_backround"/>
 
-</RelativeLayout>
+</LinearLayout>
