--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -8,7 +8,7 @@
     >
 
     <FrameLayout
-        android:background="@color/window_background"
+        android:background="@color/color_mine"
         android:id="@+id/fraglay"
         android:layout_width="match_parent"
         android:layout_height="35dp">
@@ -28,6 +28,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/window_background" />
+        android:background="@color/color_mine" />
 
 </RelativeLayout>
