Added           some change

--- a/app/src/main/res/layout/f_control.xml
+++ b/app/src/main/res/layout/f_control.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/window_background"
@@ -13,11 +13,12 @@
         android:background="@color/window_background" />
 
     <LinearLayout
+        android:layout_below="@id/tabL"
         android:id="@+id/lin_top"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone">
+        >
 
         <View
             android:layout_width="match_parent"
@@ -32,4 +33,9 @@
             android:layout_weight="1" />
     </LinearLayout>
 
-</LinearLayout>
+    <FrameLayout
+        android:id="@+id/container_id"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</RelativeLayout>
