--- a/app/src/main/res/layout/f_real.xml
+++ b/app/src/main/res/layout/f_real.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/lin_top"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,4 +20,10 @@
 
         </android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
-</LinearLayout>
+
+    <FrameLayout
+        android:background="@color/window_background"
+        android:id="@+id/container_id"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</RelativeLayout>
