--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,23 +11,30 @@
         android:id="@+id/layout_title"
         layout="@layout/title" />
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <cn.meiqu.lainmonitor.view.NoScrollViewPager
+        android:layout_marginBottom="50dp"
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_mine">
+    </cn.meiqu.lainmonitor.view.NoScrollViewPager>
+
+
     <android.support.design.widget.TabLayout
+        android:layout_alignParentBottom="true"
         android:id="@+id/table"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
     </android.support.design.widget.TabLayout>
 
-    <cn.meiqu.lainmonitor.view.NoScrollViewPager
-        android:layout_below="@id/layout_title"
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/color_mine"
-        android:layout_above="@id/table">
-    </cn.meiqu.lainmonitor.view.NoScrollViewPager>
+    </RelativeLayout>
 
 
-</RelativeLayout>
+</LinearLayout>
