--- a/app/src/main/res/layout/recycle_air.xml
+++ b/app/src/main/res/layout/recycle_air.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_item"
+        android:background="@drawable/fill_border"
         android:orientation="vertical"
         android:paddingBottom="10dp">
 
