--- a/app/src/main/res/layout/f_control.xml
+++ b/app/src/main/res/layout/f_control.xml
@@ -34,7 +34,7 @@
     </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/container_id"
+        android:id="@+id/fragment_containId"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
