Added    设备管理界面设计

--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -7,7 +7,9 @@
 
     <include layout="@layout/title" />
 
-    <FrameLayout style="@style/fragment_root">
+    <FrameLayout
+        android:id="@+id/frame_fragment"
+        style="@style/fragment_root">
 
     </FrameLayout>
 </LinearLayout>
