--- a/app/src/main/res/layout/f_control.xml
+++ b/app/src/main/res/layout/f_control.xml
@@ -6,6 +6,11 @@
     android:background="@color/window_background"
     android:orientation="vertical">
 
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tabL"
         android:layout_width="fill_parent"
@@ -33,9 +38,5 @@
             android:layout_weight="1" />
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/fragment_containId"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
 </RelativeLayout>
