--- a/baseProject/src/main/res/values/styles.xml
+++ b/baseProject/src/main/res/values/styles.xml
@@ -36,4 +36,44 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+
+    <style name="TextBackGround">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+
+
+    <style name="TextBackGround2">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/color_backround</item>
+    </style>
+
+
+    <!--  <EditText
+                       android:id="@+id/ed_5"
+                       android:background="@drawable/frame_border"
+                       android:layout_width="40dp"
+                       android:layout_height="wrap_content" />
+                       -->
+    <style name="Edit">
+        <item name="android:gravity">center</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/color_backround</item>
+        <item name="android:background">@drawable/frame_border</item>
+    </style>
+
+
+
+
+
 </resources>
