--- a/app/src/main/res/layout/re_battery_item.xml
+++ b/app/src/main/res/layout/re_battery_item.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/fill_border"
     android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp"
+    android:padding="5dp"
     >
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:background="@drawable/fill_border"
+        android:padding="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     
     <TextView
         android:layout_marginTop="5dp"
@@ -36,5 +42,8 @@
         android:id="@+id/battery_ip_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+
+    </LinearLayout>
 
 </LinearLayout>
