--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,64 +1,61 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/color_mine"
+    android:gravity="center"
     >
 
+ <RelativeLayout
+     android:id="@+id/re_image"
+     android:gravity="center"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content">
 
-    <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/fb_person"
-        android:background="@color/window_background"
+   <ImageView
+       android:id="@+id/image"
+       android:layout_marginTop="10dp"
+       android:src="@drawable/admin"
+       android:layout_width="100dp"
+       android:layout_height="100dp" />
+ </RelativeLayout>
+
+
+ <LinearLayout
+     android:id="@+id/ll_mine"
+     android:layout_below="@id/re_image"
+     android:orientation="vertical"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent">
+
+    <TextView
+        style="@style/MineEdit"
+        android:text="个人信息"/>
+
+    <TextView
+        style="@style/MineEdit"
+        android:text="信息修改"
+        />
+
+    <TextView
+        style="@style/MineEdit"
+        android:text="密码修改"
+     />
+
+    <TextView
+        android:id="@+id/setting_tv"
+        style="@style/MineEdit"
+        android:text="设置"
+        />
+
+ </LinearLayout>
+
+
+    <FrameLayout
+        android:id="@+id/contain_id"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="50dp"
-        app:fb_text="个人信息"
-        app:fb_textColor="@color/black"
-        app:fb_defaultColor="@color/white"
-        app:fb_focusColor="@color/color_backround"/>
-
-    <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/fb_person_change"
-        android:background="@color/window_background"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentBottom="true"
-        app:fb_text="信息修改"
-        app:paddingStart="50dp"
-        app:fb_textColor="@color/black"
-        app:fb_defaultColor="@color/white"
-        app:fb_focusColor="@color/color_backround"/>
-
-    <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/fb_password"
-        android:background="@color/window_background"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentBottom="true"
-        app:fb_text="密码修改"
-        app:fb_textColor="@color/black"
-        app:fb_defaultColor="@color/white"
-        app:fb_focusColor="@color/color_backround"/>
+        android:layout_height="match_parent"/>
 
 
-    <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/fb_logout"
-        android:background="@color/window_background"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentBottom="true"
-        app:fb_text="退出登录"
-        app:fb_textColor="@color/black"
-        app:fb_defaultColor="@color/white"
-        app:fb_focusColor="@color/color_backround"/>
-
-</LinearLayout>
+</RelativeLayout>
