Fixed              手机虚拟按键bug,虽然用fitSystem = true,但是会对一些东西造成一个全局的影响，例如Toast，ProgressBar等等 Added            添加了进度条的ProgressBarDialog，帧动画效果

--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/black"
     style="@style/activity_root"
     android:orientation="vertical"
     tools:context="cn.meiqu.lainmonitor.aui.ControlActivity">
