--- a/app/src/main/res/layout/activity_door_control.xml
+++ b/app/src/main/res/layout/activity_door_control.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/door_ll"
     android:orientation="vertical"
+    android:background="@color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <include layout="@layout/title"/>
 
     <in.srain.cube.views.ptr.PtrClassicFrameLayout
+        android:background="@color/white"
         android:id="@+id/ptr_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
