--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rl_main"
+    android:background="@color/black"
     style="@style/activity_root"
     tools:context=".MainActivity"
     >
@@ -28,6 +29,7 @@
 
 
     <android.support.design.widget.TabLayout
+        android:background="@color/colorAccent"
         android:layout_alignParentBottom="true"
         android:id="@+id/table"
         android:layout_width="match_parent"
