--- a/app/src/main/res/layout/activity_selection_control.xml
+++ b/app/src/main/res/layout/activity_selection_control.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@color/black"
     android:layout_height="match_parent">
     <include layout="@layout/title"/>
     <in.srain.cube.views.ptr.PtrClassicFrameLayout
+        android:background="@color/white"
         android:id="@+id/ptr_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
