--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -2,9 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white"
+    android:background="@color/black"
     android:layout_height="match_parent">
-    <include layout="@layout/title"/>
+    <include
+        android:id="@+id/toolBar"
+        layout="@layout/title"/>
+    <RelativeLayout
+        android:layout_below="@id/toolBar"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/fb_logout"
@@ -17,5 +25,6 @@
         app:fb_textColor="@color/white"
         app:fb_defaultColor="@color/color_red"
         app:fb_focusColor="@color/color_backround"/>
+    </RelativeLayout>
 
 </RelativeLayout>
