--- a/app/src/main/res/layout/activtiy_battery.xml
+++ b/app/src/main/res/layout/activtiy_battery.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@color/black"
     android:layout_height="match_parent">
 
     <include layout="@layout/title" />
@@ -8,6 +9,7 @@
 
     <in.srain.cube.views.ptr.PtrClassicFrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="@color/white"
         android:id="@+id/ptr_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
