--- a/app/src/main/res/layout/f_modify.xml
+++ b/app/src/main/res/layout/f_modify.xml
@@ -249,11 +249,11 @@
     </LinearLayout>
 
     <mehdi.sakout.fancybuttons.FancyButton
+        android:layout_marginTop="20dp"
         android:id="@+id/fb_modify"
         android:background="@color/window_background"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_marginBottom="120dp"
         android:layout_alignParentBottom="true"
         app:fb_text="提交修改"
         app:fb_textColor="@color/black"
