--- a/baseProject/src/main/res/layout/toast.xml
+++ b/baseProject/src/main/res/layout/toast.xml
@@ -3,21 +3,36 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/main_color">
+    android:gravity="center"
+    android:background="@drawable/shape_toast">
 
-    <TextView
+    <LinearLayout
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/text1"
+        android:gravity="center"
+        android:background="@drawable/toast_item"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_centerInParent="true"
         android:textColor="@color/white"
-        android:textSize="15dp"
-        android:textStyle="bold" />
+        android:text="!"
+        android:textSize="15dp" />
 
     <TextView
+        android:id="@+id/text2"
+        android:layout_marginLeft="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
-        android:visibility="invisible" />
+        android:textSize="15dp" />
+
+    </LinearLayout>
 </RelativeLayout>
