--- a/app/src/main/res/layout/recycle_door_real.xml
+++ b/app/src/main/res/layout/recycle_door_real.xml
@@ -51,9 +51,8 @@
 
     <TextView
         android:id="@+id/tv_time"
-        android:layout_width="wrap_content"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:gravity="center"
         android:padding="6dp"
         android:singleLine="true"
