--- a/app/src/main/res/layout/surface.xml
+++ b/app/src/main/res/layout/surface.xml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@color/black"
+    android:background="@android:color/black"
     android:layout_height="match_parent">
+
     <include
         android:id="@+id/toolBar"
         layout="@layout/title"/>
 
     <RelativeLayout
-        android:layout_below="@id/toolBar"
         android:background="@color/white"
-        android:gravity="center"
+        android:layout_below="@id/toolBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:background="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="360dp"
+        android:gravity="center"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
     <SurfaceView
         android:id="@+id/surfaceviewId"
         android:layout_width="match_parent"
-        android:layout_height="250dp" />
+        android:layout_height="300dp" />
+
+    </RelativeLayout>
 
     </RelativeLayout>
 </RelativeLayout>
