--- a/app/src/main/res/layout/capture_image.xml
+++ b/app/src/main/res/layout/capture_image.xml
@@ -6,6 +6,7 @@
 
 
     <ImageView
+        android:padding="3dp"
         android:id="@+id/image"
         android:layout_width="200dp"
         android:layout_height="150dp" >
